[package]
name = "picard-ica"
version = "0.1.1"
edition = "2021"
authors = ["Louis Maddox <louismmx@gmail.com>"]
description = "Fast Independent Component Analysis using preconditioned L-BFGS optimization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lmmx/picard-ica"
documentation = "https://docs.rs/picard-ica"
readme = "README.md"
keywords = ["ica", "signal-processing", "machine-learning"]
categories = ["science", "algorithms", "mathematics"]

[lib]
name = "picard"

[dependencies]
ndarray = "0.17"
ndarray-linalg = { version = "0.18.0", features = ["openblas-system"] }
num-traits = "0.2"
rand = "0.9"
rand_distr = "0.5.1"

[dev-dependencies]
approx = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []
# Alternative BLAS backends
intel-mkl = ["ndarray-linalg/intel-mkl-system"]
netlib = ["ndarray-linalg/netlib-system"]
