[package]
name = "picard-ica"
version = "0.1.2"
edition = "2021"
authors = ["Louis Maddox <louismmx@gmail.com>"]
description = "Fast Independent Component Analysis using preconditioned L-BFGS optimization"
license = "BSD-3-Clause"
repository = "https://github.com/lmmx/picard-ica"
documentation = "https://docs.rs/picard-ica"
readme = "README.md"
keywords = ["ica", "signal-processing", "machine-learning"]
categories = ["science", "algorithms", "mathematics"]

[lib]
name = "picard"

[dependencies]
faer = "0.23.2"
rand = "0.9"
rand_distr = "0.5.1"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
