[package]
name = "picard-ica"
version = "0.1.3"
edition = "2021"
authors = ["Louis Maddox <louismmx@gmail.com>"]
description = "Fast Independent Component Analysis using preconditioned L-BFGS optimization"
license = "BSD-3-Clause"
repository = "https://github.com/lmmx/picard-ica"
documentation = "https://docs.rs/picard-ica"
readme = "README.md"
keywords = ["ica", "signal-processing", "machine-learning"]
categories = ["science", "algorithms", "mathematics"]

[lib]
name = "picard"

[dependencies]
ndarray = "0.17"
ndarray-linalg = "0.18.0"
rand = "0.9"
rand_distr = "0.5.1"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["openblas-sys"]
openblas-sys = ["ndarray-linalg/openblas-system"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
